--- a/src/Components/Employer/scss/_employerlogin.scss
+++ b/src/Components/Employer/scss/_employerlogin.scss
@@ -68,6 +68,10 @@
                     padding: 0 1rem;
                 }
             }
+
+            & button{
+                margin-top: 2rem;
+            }
              
         }
     }
