--- a/src/Components/Scss/_components.scss
+++ b/src/Components/Scss/_components.scss
@@ -1,6 +1,7 @@
+@import './variable';
+
 .primarybtn{
     border: none;
-    margin-top: 2rem;
     width: 100%;
     height: 3rem;
     border-radius: 0.5rem;
@@ -18,4 +19,43 @@
 .logo{
     width: 10rem;
     height: 6rem;
+}
+
+.active-button{
+    border-radius: 0.5rem;
+    background-color: $secondarygreen;
+    color: $pure;
+    border: none;
+    padding: 1rem;
+    font-size: 1.5rem;
+    text-align: left;
+    cursor: pointer;
+
+}
+
+.nonactive-button{
+    border-radius: 0.5rem;
+    border: none;
+    background-color: $pure;
+    color: $lightgreen;
+    padding: 0 1rem;
+    font-size: 1.5rem;
+    text-align: left;
+    cursor: pointer;
+
+}
+
+hr{
+    width: 100%;
+    border: none;
+    height: 0.2rem;
+    background-color: $primarycolor;
+}
+
+.inputboxs{
+    color: $secondarygreen;
+    background-color: $primarycolor;
+    border: none;
+    border-radius: 1rem;
+    padding: 0 1rem;
 }
