Projects pages added

--- a/src/Components/Scss/main.scss
+++ b/src/Components/Scss/main.scss
@@ -9,7 +9,11 @@
 @import '../Employer/scss/employeelist';
 @import '../Employer/scss/addemployee';
 @import '../Employer/scss/employee-details';
+@import '../Employer/scss/totalprojects';
+@import '../Employer/scss/pendingprojects';
+@import '../Employer/scss/assignprojects';
 @import '../Employer/scss/employee-application';
+
 
 @import '../Employee/scss/employeelogin';
 
