--- a/src/Components/Scss/_components.scss
+++ b/src/Components/Scss/_components.scss
@@ -26,7 +26,7 @@
     background-color: $secondarygreen;
     color: $pure;
     border: none;
-    padding: 1rem;
+    padding: 0 1rem;
     font-size: 1.5rem;
     text-align: left;
     cursor: pointer;
