--- a/src/Components/Employer/scss/_employee-application-details.scss
+++ b/src/Components/Employer/scss/_employee-application-details.scss
@@ -2,28 +2,28 @@
 @import '../../Scss/fonts';
 @import '../../Scss/variable';
 
-.add-employee-container{
+.employee-application-details{
     position: relative;
     width: initial;
     height: 100%;
     border-radius: 5rem 0 0 0;
     background-color: $primarycolor;
     overflow: overlay;
-    & .add-employee-section{
+    & .employee-application-details-container{
+        padding: 2rem;
         display: flex;
+        padding: 5rem 1rem;
         flex-direction: column;
-        
-        & .addemployee-header{
+        & .employee-application-details-header{
             margin-top: 3rem;
             padding: 2rem;
-            text-align: center;
+            text-align: left;
             & hr{
                 margin-top: 3rem;
                 background-color: $lightgreen;  
             }
         }
-
-        & .add-employee-details{
+        & .employee-application-details{
             position: relative;
             background-color: $pure;
             box-shadow: 0 0 1rem rgba($color: #000000, $alpha: 0.1);
@@ -32,48 +32,30 @@
             display: flex;
             flex-direction: column;
             gap: 3rem;
-            & .add-employee-header{
+            & .employee-application-details-headers{
                 margin: 1rem;
-                padding: 1rem;
                 border-radius: 1rem;
                 background-color: $primarycolor;
                 color: $secondarygreen;
                 text-align: center;
-
+                padding: 1rem;
             }
-            & .add-employee-form{
-                position: relative;
+           & .employee-application-details-content{
+               padding:  1rem 3rem;
+           }
+           & .employee-application-details-decision{
                 display: flex;
                 flex-direction: row;
-                justify-content: space-evenly;
-                align-items: center;
-
-                & p, input{
-                    text-align: center;
-                    width: 10rem;
-                    align-items: center;
-
-                }
-            
-                & .addemp-input{
-                    width: 40rem;
-                    height: 4rem;
-                    border: 2px solid $secondarygreen;
-                }
-            }
-            & .add-employee-submitbtn{
-                // border: 1px solid;
-                margin: 4rem;
+                justify-content: space-between;
                 margin-top: 8rem;
-                display: flex;
-                justify-content: center;
+                padding: 3rem;
+                
                 & button{
                     text-align: center;
                     width: 25rem;
-                    height: 5rem;
-                    font-size: 2.4rem;
+                    height: 4rem;
                 }
-            }
+           }
         }
     }
 }
