--- a/src/Components/Employer/scss/_employee-application.scss
+++ b/src/Components/Employer/scss/_employee-application.scss
@@ -11,17 +11,18 @@
     & .employee-application-section{
         padding: 2rem;
         display: flex;
+        padding: 5rem 1rem;
         flex-direction: column;
         & .employee-application-header{
             display: flex;
-            flex-direction: row;
             align-items: center;
+            padding: 0 2rem;
         }
 
         & .employee-application-list-section{
             display: flex;
             flex-direction: column;
-            padding: 1rem 0;
+            padding: 2rem 1rem;
             gap: 1rem;
             overflow: overlay;
             & .employee-application-list-header{
@@ -31,7 +32,13 @@
                 background-color: $secondarygreen;
                 border-radius: 1rem;
                 padding: 0 2rem;
-
+                align-items: center;
+                height: 5rem;
+                & p{
+                    width: 25rem;
+                    text-align: center;
+                    // border: 2px solid;
+                }
             }
             & .employee-application-main-list{
                 display: flex;
@@ -40,6 +47,13 @@
                 background-color: $pure;
                 border-radius: 1rem;
                 padding: 0 2rem;
+                align-items: center;
+                height: 5rem;
+                & p{
+                    width: 25rem;
+                    text-align: center;
+                    // border: 2px solid;
+                }
             }
         }
     }
