--- a/src/Components/Employer/scss/_employee-details.scss
+++ b/src/Components/Employer/scss/_employee-details.scss
@@ -14,20 +14,24 @@
     & .employee-details-section{
         display: flex;
         flex-direction: column;
+        padding: 5rem 1rem;
 
         & .employee-details-header{
             text-align: center;
+
+            & hr{
+                margin: 3rem 0;
+                background-color: $secondarygreen;
+            }
         }
 
         & .employee-details-info-section{
             display: flex;
             flex-direction: row;
             height: fit-content;
-            padding: 1rem;
-            // justify-content: center;
             & .employee-details-info{
                 position: relative;
-                width: 70%;
+                width: 80%;
                 height: 100%;
                 background-color: $pure;
                 box-shadow: 0 0 1rem rgba($color: #000000, $alpha: 0.1);
@@ -40,19 +44,29 @@
                 & .employee-details-inside-header{
                     margin: 1rem;
                     border-radius: 1rem;
+                    padding: 1rem;
                     background-color: $primarycolor;
                     color: $secondarygreen;
                     text-align: center;
                 }
                 & .employee-details-inside-info{
-                    padding: 0 1rem;
+                    padding: 0 4rem;
+
+                    & ul{
+                        padding:  1rem 2rem;
+                        & li{
+                            padding: 1rem 0;
+                        }
+                        & p{
+                            padding: 1rem 0;
+                        }
+                    }
                 }
             }
 
             & .employee-details-projects{
                 position: relative;
-                width: 30%;
-                height: 50%;
+                width: 20%;
                 background-color: $pure;
                 box-shadow: 0 0 1rem rgba($color: #000000, $alpha: 0.1);
                 border-radius: 1rem;
@@ -60,22 +74,20 @@
                 display: flex;
                 flex-direction: column;
                 justify-content: center;
-                // gap: 1rem;
+                align-items: center;
+                
 
                 & .employee-details-box1{
                     background-color: $primarycolor;
                     margin: 1rem;
                     border-radius: 1rem;
-                    padding: 1rem;
-                    display: flex;
-                    flex-direction: column;
-                    justify-content: center;
-
-                    & p{
-                        margin: 1rem;
-                    }
-
+                    padding: 1rem 1rem;
+                    width: 20rem;
+                    height: 18rem;
+                    
+                    
                     & button{
+                        margin-top: 5rem;
                         width: 100%;
                         height: 30%;
                         text-align: center;
