--- a/src/Components/Employer/scss/_employeelist.scss
+++ b/src/Components/Employer/scss/_employeelist.scss
@@ -14,22 +14,23 @@
         display: flex;
         flex-direction: column;
         width: inherit;
-        padding: 3rem 2rem;
+        padding: 5rem 1rem;
 
         & .employeelist-header-section{
             display: flex;
             flex-direction: row;
             justify-content: space-between;
             align-items: center;
+            padding: 0 2rem;
             & button{
-                width: 20rem;
-                height: 3rem;
+                width: 26rem;
+                height: 5rem;
                 text-align: center;
-                border: 2px solid black; 
+                border: 2px solid $secondarygreen; 
             }
             & button:hover{
-                width: 20rem;
-                height: 3rem;
+                width: 26rem;
+                height: 5rem;
                 text-align: center;
                 background-color: $secondarygreen;
                 color: $pure;
@@ -39,7 +40,7 @@
         & .employee-list-section{
             display: flex;
             flex-direction: column;
-            padding: 1rem 0;
+            padding: 2rem 1rem;
             gap: 1rem;
             overflow: overlay;
         
@@ -50,6 +51,13 @@
             background-color: $secondarygreen;
             border-radius: 1rem;
             padding: 0 2rem;
+            align-items: center;
+            height: 5rem;
+            & p{
+                width: 25rem;
+                text-align: center;
+                // border: 2px solid;
+            }
         }
         & .employee-main-list{
             display: flex;
@@ -58,6 +66,13 @@
             background-color: $pure;
             border-radius: 1rem;
             padding: 0 2rem;
+            align-items: center;
+            height: 5rem;
+            & p{
+                width: 25rem;
+                text-align: center;
+                // border: 2px solid;
+            }
         }
     }
     }
