--- a/src/Components/Employer/scss/_totalprojects.scss
+++ b/src/Components/Employer/scss/_totalprojects.scss
@@ -13,12 +13,13 @@
     & .total-project-container{
         display: flex;
         flex-direction: column;
-        padding: 1rem;  
+        padding: 5rem 1rem;
         & .total-project-details-header{
             text-align: center;
         }
 
         & hr{
+            margin: 3rem 0;
             background-color: $lightgreen;  
         }
         & .projects-sections{
@@ -26,17 +27,18 @@
             flex-direction: row;
             justify-content: space-around;
             & button{
-                text-align: center;
+                display: flex;
+                justify-content: center;
                 align-items: center;
-                height: 3rem;
-                width: 20rem;
+                width: 35rem;
+                height: 4rem;
             }
         }
 
         & .total-project-main-list{
             display: flex;
             flex-direction: column;
-            padding: 1rem 0;
+            padding: 2rem 1rem;
             gap: 1rem;
             overflow: overlay;
             & .total-project-header-list{
@@ -46,6 +48,13 @@
                 background-color: $secondarygreen;
                 border-radius: 1rem;
                 padding: 0 2rem;
+                align-items: center;
+                height: 5rem;
+                & p{
+                    width: 25rem;
+                    text-align: center;
+                    // border: 2px solid;
+                }
             }
 
             & .total-project-main-list{
@@ -55,6 +64,13 @@
                 background-color: $pure;
                 border-radius: 1rem;
                 padding: 0 2rem;
+                align-items: center;
+                height: 5rem;
+                & p{
+                    width: 25rem;
+                    text-align: center;
+                    // border: 2px solid;
+                }
             }
         }
     }
