--- a/src/Components/Scss/_fonts.scss
+++ b/src/Components/Scss/_fonts.scss
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100;200;300;400&family=Roboto:wght@300;400;700&display=swap');
 
+
 .header-42-bold{
     font-size: 4.2rem;
     font-style: normal;
@@ -30,6 +31,19 @@
 
 .input-label-24{
     font-size: 2.4rem;
+    font-style: normal;
+    font-weight: 300;
+    font-family: 'Roboto', sans-serif;
+}
+.input-label-24-bold{
+    font-size: 2.4rem;
+    font-style: normal;
+    font-weight: 500;
+    font-family: 'Roboto', sans-serif;
+}
+
+.input-label-15{
+    font-size: 1.5rem;
     font-style: normal;
     font-weight: 300;
     font-family: 'Roboto', sans-serif;
