--- a/src/Components/Employer/scss/_assignprojects.scss
+++ b/src/Components/Employer/scss/_assignprojects.scss
@@ -34,7 +34,98 @@
                 height: 4rem;
             }
         }
+        
+        & .assignments-container{
+            position: relative;
+            background-color: $pure;
+            box-shadow: 0 0 1rem rgba($color: #000000, $alpha: 0.1);
+            border-radius: 1rem;
+            margin: 3rem 2rem;
+            display: flex;
+            flex-direction: column;
+            gap: 3rem;
 
-      
+            & .assignments-header{
+                margin: 1rem;
+                padding: 1rem;
+                border-radius: 1rem;
+                background-color: $primarycolor;
+                color: $secondarygreen;
+                text-align: center;
+            }
+
+            & .assignments-sections{
+                display: flex;
+                flex-direction: row;
+                width: 100%;
+
+                & .assignment-forms-container{
+                    position: relative;
+                    display: flex;
+                    flex-direction: column;
+                    align-items: center;
+                    width: 70%;
+                    & .assignments-form{
+                        position: relative;
+                        display: flex;
+                        flex-direction: row;
+                        justify-content: space-evenly;
+                        align-items: center;
+                        padding: 1rem;
+                        & p, input{
+                            width: 15rem;
+                            align-items: center;
+        
+                        }
+                            & .addemp-assign{
+                                width: 40rem;
+                                height: 4rem;
+                                border: none;
+                                // border: 2px solid $secondarygreen;
+                            }
+
+                            & .addemp-assign-1{
+                                width: 40rem;
+                                height: 15rem;
+                                border: none;
+                                padding: 1rem;
+                            }
+
+                        }
+                        & .assignments-submitbtn{
+                            margin: 4rem;
+                            margin-top: 8rem;
+                            display: flex;
+                            & button{
+                                text-align: center;
+                                width: 25rem;
+                                height: 5rem;
+                                font-size: 2.4rem;
+                            }
+                        }
+                }
+
+                & hr{
+                    margin: 0 3rem 0 0;
+                    width: 0.1rem;
+                    height: 42rem;
+                }
+                & .select-employee-assignment{
+                    display: flex;
+                    flex-direction: column;
+                    width: 30%;
+                    padding: 0 2rem 3rem 2rem;
+
+                    & p{
+                        padding: 0 0 2rem 0;
+                    }
+                    & .checkbox-assign-employee{
+                        padding: 1rem 1.5rem;
+                        text-align: left;
+
+                    }
+                }
+            }
+        }
     }
 }
