--- a/src/Components/Scss/_fonts.scss
+++ b/src/Components/Scss/_fonts.scss
@@ -29,6 +29,13 @@
     font-family: 'Roboto', sans-serif;
 }
 
+.input-label-30{
+    font-size: 3rem;
+    font-style: normal;
+    font-weight: 300;
+    font-family: 'Roboto', sans-serif;
+}
+
 .input-label-24{
     font-size: 2.4rem;
     font-style: normal;
@@ -39,6 +46,13 @@
     font-size: 2.4rem;
     font-style: normal;
     font-weight: 500;
+    font-family: 'Roboto', sans-serif;
+}
+
+.input-label-20{
+    font-size: 2rem;
+    font-style: normal;
+    font-weight: 300;
     font-family: 'Roboto', sans-serif;
 }
 
