--- a/src/Components/Scss/main.scss
+++ b/src/Components/Scss/main.scss
@@ -18,6 +18,9 @@
 @import '../Employee/scss/employee-profile';
 @import '../Employee/scss/project-list';
 @import '../Employee/scss/project-details';
+@import '../Employee/scss/project-submission';
+@import '../Employee/scss/application-list';
+@import '../Employee/scss/add-application';
 
 html{
     font-size: 62.5%;
