one more page added

--- a/src/Components/Scss/main.scss
+++ b/src/Components/Scss/main.scss
@@ -21,6 +21,7 @@
 @import '../Employee/scss/project-submission';
 @import '../Employee/scss/application-list';
 @import '../Employee/scss/add-application';
+@import '../Employee/scss/tracker';
 
 html{
     font-size: 62.5%;
