--- a/src/Components/Employee/scss/_application-list.scss
+++ b/src/Components/Employee/scss/_application-list.scss
@@ -27,13 +27,20 @@
                 height: 5rem;
                 text-align: center;
                 border: 2px solid $secondarygreen; 
+                & a{
+                    text-decoration: none;
+                    color: $lightgreen;
+                }
             }
             & button:hover{
                 width: 26rem;
                 height: 5rem;
                 text-align: center;
                 background-color: $secondarygreen;
-                color: $pure;
+                & a{
+                    text-decoration: none;
+                    color: $pure;
+                }
             }
         }
 
@@ -72,6 +79,10 @@
                 width: 25rem;
                 text-align: center;
                 // border: 2px solid;
+                & a{
+                    text-decoration: none;
+                    color: $lightgreen;
+                }
             }
             }
         }
