--- a/src/Components/Employee/scss/_employee-dashboard.scss
+++ b/src/Components/Employee/scss/_employee-dashboard.scss
@@ -7,6 +7,7 @@
     width: 100%;
     height: 100vh;
     & .left-navigation-panel{
+        position: fixed;
         width: 18%;
         position: relative;
         align-items: center;
@@ -41,6 +42,5 @@
 
     & .right-dashboard-panel{
         width: 82%;
-        position: relative;
     }
 }
