--- a/src/Components/Employee/scss/_project-details.scss
+++ b/src/Components/Employee/scss/_project-details.scss
@@ -63,6 +63,10 @@
                         text-align: center;
                         width: 18rem;
                         height: 4rem;
+                        & a{
+                            text-decoration: none;
+                            color: $pure;
+                        }
                     }
                 }
             }
