--- a/src/Components/Employee/scss/_project-list.scss
+++ b/src/Components/Employee/scss/_project-list.scss
@@ -59,6 +59,10 @@
                     width: 25rem;
                     text-align: center;
                     // border: 2px solid;
+                    & a{
+                        text-decoration: none;
+                        color: $lightgreen;
+                    }
                 }
                 & .project-title{
                     width: 50rem;
