--- a/src/Components/Employer/scss/_assignprojects.scss
+++ b/src/Components/Employer/scss/_assignprojects.scss
@@ -32,6 +32,10 @@
                 align-items: center;
                 width: 35rem;
                 height: 4rem;
+                & a{
+                    text-decoration: none;
+                    color: $lightgreen;
+                }
             }
         }
         
