--- a/src/Components/Employer/scss/_employee-application.scss
+++ b/src/Components/Employer/scss/_employee-application.scss
@@ -53,6 +53,10 @@
                     width: 25rem;
                     text-align: center;
                     // border: 2px solid;
+                    & a{
+                        text-decoration: none;
+                        color: $lightgreen;
+                    }
                 }
             }
         }
