--- a/src/Components/Employer/scss/_employeelist.scss
+++ b/src/Components/Employer/scss/_employeelist.scss
@@ -72,6 +72,11 @@
                 width: 25rem;
                 text-align: center;
                 // border: 2px solid;
+
+                & a{
+                    text-decoration: none;
+                    color: $lightgreen;
+                }
             }
         }
     }
