--- a/src/Components/Employer/scss/_employer-dashboard-container.scss
+++ b/src/Components/Employer/scss/_employer-dashboard-container.scss
@@ -32,12 +32,14 @@
                 margin: 1rem 0;
                 width: 26rem;
                 height: 5rem;
+                
+                & a{
+                    text-decoration: none;
+                    color: $lightgreen;
+                }
             }
             & .addemp-list{
                 align-items: center;
-                & img{
-
-                }
             }
         }
 
